--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,10 +11,8 @@ on:
   # run on every push on the master branch
   push:
     branches:
-    - master
+    - main
     
-  
-
 jobs:
   generate:
     permissions: 
@@ -30,7 +28,7 @@ jobs:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
             dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+            # dist/github-contribution-grid-snake-dark.svg?palette=github-dark
           
           
       # push the content of <build_dir> to a branch
