--- a/.github/workflows/snk-animation-gen.yml
+++ b/.github/workflows/snk-animation-gen.yml
@@ -7,9 +7,9 @@ on:
   
   workflow_dispatch:
   
-  push:
-    branches:
-    - main
+  # push:
+  #   branches:
+  #   - main
     
 jobs:
   generate:
